<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">






    <HorizontalScrollView
android:visibility="gone"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_1"
                android:text="@string/business"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_2"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_3"
                android:text="@string/general"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_4"
                android:text="@string/health"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_5"
                android:text="@string/science"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_6"
                android:text="@string/sports"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:id="@+id/btn_7"
                android:text="@string/technology"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>


        </LinearLayout>

    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search News..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.SearchView>

    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_main"
            android:layout_margin="8dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</LinearLayout>